<resources>
    <string name="app_name">App100</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Perfil</string>
    <string name="menu_slideshow">Búsqueda</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="search">Buscar</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="birthdate">Cumpleaños</string>
    <string name="email">Correo</string>
    <string name="phone">Teléfono</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="dni">12345678A</string>

    <string name="nombre">Nombre</string>
    <string name="correo">correo@correo.es</string>

    <string name="title_slideshow">Slideshow</string>



</resources>